unpackaged/main/default/objects/Costs_and_Charges__c/Costs_and_Charges__c.object-meta.xml
<CustomObject>
    <label>Costs and Charges</label>
    <nameField>
        <displayFormat>CandC-{000000}</displayFormat>
        <label>Costs and Charges Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Costs and Charges</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>