unpackaged/main/default/objects/Costs_and_Charges__c/fields/Admin_Fee_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Admin_Fee_Percentage__c</fullName>
    <description>The percentage admin fee for the job.</description>
    <label>Admin Fee Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>