unpackaged/main/default/objects/Costs_and_Charges__c/fields/Budget_Materials_Charge__c.field-meta.xml
<CustomField>
    <fullName>Budget_Materials_Charge__c</fullName>
    <description>Budgeted Materials Charge, combining PREQ for POs and PREQ for Van Stock</description>
    <formula>Charge_Total_PO_Product_Required__c +  Charge_Total_Van_Stock_Product_Required__c
+
 Charge_Total_Scaffold_Product_Required__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Budgeted Materials Charge, combining PREQ for POs and PREQ for Van Stock</inlineHelpText>
    <label>Budget: Materials Charge</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>