unpackaged/main/default/objects/Costs_and_Charges__c/fields/Call_Out_Fee__c.field-meta.xml
<CustomField>
    <fullName>Call_Out_Fee__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Call out fee - this can be account or location related (i.e. credit account call out fee OR location based fee such as ULEZ charge)</description>
    <inlineHelpText>Call out fee - this can be account or location related (i.e. credit account call out fee OR location based fee such as ULEZ charge)</inlineHelpText>
    <label>Call Out Fee</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>