unpackaged/main/default/objects/Costs_and_Charges__c/fields/Charge_call_out_fee__c.field-meta.xml
<CustomField>
    <fullName>Charge_call_out_fee__c</fullName>
    <formula>Call_Out_Fee__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Charge: Call out fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>