unpackaged/main/default/objects/Costs_and_Charges__c/fields/Charge_labour__c.field-meta.xml
<CustomField>
    <fullName>Charge_labour__c</fullName>
    <formula>/*CASE(Record_Type__c, 

&quot;F&quot;,
FP_Chargeable_Duration_R1__c *  Hourly_Charge_R1__c +
FP_Chargeable_Duration_R2__c *  Hourly_Charge_R2__c +
FP_Chargeable_Duration_R3__c *  Hourly_Charge_R3__c
,
*/
Chargeable_Duration_R1__c *  Hourly_Charge_R1__c +
Chargeable_Duration_R2__c *  Hourly_Charge_R2__c +
Chargeable_Duration_R3__c *  Hourly_Charge_R3__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Charge: Labour</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>