unpackaged/main/default/objects/Costs_and_Charges__c/fields/Charge_Material_Mark_up__c.field-meta.xml
<CustomField>
    <fullName>Charge_Material_Mark_up__c</fullName>
    <formula>IF(
Material_POs_Aspect__c + Material_POs_Engineer__c + Materials_Expenses_w_out_receipt__c + Materials_Expenses_with_receipt__c&lt;=Mark_Up_Band_2_Start__c	,
Mark_Up_Band_1_Rate__c,
IF(
Material_POs_Aspect__c + Material_POs_Engineer__c + Materials_Expenses_w_out_receipt__c + Materials_Expenses_with_receipt__c &lt;=Mark_Up_Band_2_End__c,
Mark_Up_Band_2_Rate__c, 
Mark_Up_Band_3_Rate__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Charge Material Mark-up</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>