unpackaged/main/default/objects/Costs_and_Charges__c/fields/Charge_Materials__c.field-meta.xml
<CustomField>
    <fullName>Charge_Materials__c</fullName>
    <formula>CASE(Record_Type__c,
&quot;R&quot;,
( Material_POs_Aspect__c + Material_POs_Engineer__c + 
Materials_Expenses_w_out_receipt__c  )
,

&quot;F&quot;,
 Charge_Total_Van_Stock_Product_Required__c + Charge_Total_PO_Product_Required__c + Charge_Total_Scaffold_Product_Required__c
,
null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Charge: Materials</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>