unpackaged/main/default/objects/Costs_and_Charges__c/fields/Charge_Other_Item__c.field-meta.xml
<CustomField>
    <fullName>Charge_Other_Item__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Charge Other Item</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>