unpackaged/main/default/objects/Costs_and_Charges__c/fields/Charge_Other_Total__c.field-meta.xml
<CustomField>
    <fullName>Charge_Other_Total__c</fullName>
    <formula>Charge_Collection_Fee__c 
+
 Charge_Other_Item__c 
+
 Call_Out_Fee__c 
+
 Charge_ULEZ__c
+
 Fixed_Price_Admin_Fee_2__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Charge Other Total (with admin fee)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>