unpackaged/main/default/objects/Costs_and_Charges__c/fields/Charge_Total__c.field-meta.xml
<CustomField>
    <fullName>Charge_Total__c</fullName>
    <formula>Charge_Total_Pre_Admin_Fee__c  + Fixed_Price_Admin_Fee_2__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Charge Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>