unpackaged/main/default/objects/Costs_and_Charges__c/fields/Charge_Total_Pre_Admin_Fee__c.field-meta.xml
<CustomField>
    <fullName>Charge_Total_Pre_Admin_Fee__c</fullName>
    <formula>Charge_Total_pre_discount__c 
-
 Discount_Value__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Charge Total Pre Admin Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>