unpackaged/main/default/objects/Costs_and_Charges__c/fields/Charge_Total_pre_discount__c.field-meta.xml
<CustomField>
    <fullName>Charge_Total_pre_discount__c</fullName>
    <formula>Call_Out_Fee__c +  Charge_labour__c +  Charge_Materials__c + Charge_ULEZ__c + Charge_Collection_Fee__c + Charge_List_Price_Services__c +  Charge_Other_Item__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Charge: Total (pre-discount)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>