unpackaged/main/default/objects/Costs_and_Charges__c/fields/Charge_Total_Scaffold_Product_Required__c.field-meta.xml
<CustomField>
    <fullName>Charge_Total_Scaffold_Product_Required__c</fullName>
    <label>Charge: Total Scaffold Product Required</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>