unpackaged/main/default/objects/Costs_and_Charges__c/fields/Charge_Total_Van_Stock_Product_Required__c.field-meta.xml
<CustomField>
    <fullName>Charge_Total_Van_Stock_Product_Required__c</fullName>
    <description>Total of Product Required of type &#39;Van Stock&#39; on the related Work Order</description>
    <inlineHelpText>Total of Product Required of type &#39;Van Stock&#39; on the related Work Order</inlineHelpText>
    <label>Charge: Total Van Stock Product Required</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>