unpackaged/main/default/objects/Costs_and_Charges__c/fields/Charge_ULEZ__c.field-meta.xml
<CustomField>
    <fullName>Charge_ULEZ__c</fullName>
    <label>Charge ULEZ</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>