unpackaged/main/default/objects/Costs_and_Charges__c/fields/Chargeable_Duration_R1__c.field-meta.xml
<CustomField>
    <fullName>Chargeable_Duration_R1__c</fullName>
    <description>Chargeable Duration at R1 in hours</description>
    <inlineHelpText>Chargeable Duration at R1 in hours</inlineHelpText>
    <label>Chargeable Duration R1</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>