unpackaged/main/default/objects/Costs_and_Charges__c/fields/Chargeable_Duration_R3__c.field-meta.xml
<CustomField>
    <fullName>Chargeable_Duration_R3__c</fullName>
    <description>Chargeable Duration at R3 in hours</description>
    <inlineHelpText>Chargeable Duration at R3 in hours</inlineHelpText>
    <label>Chargeable Duration R3</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>