unpackaged/main/default/objects/Costs_and_Charges__c/fields/Chargeable_Visit_Pay_Op_or_Not__c.field-meta.xml
<CustomField>
    <fullName>Chargeable_Visit_Pay_Op_or_Not__c</fullName>
    <label>Chargeable Visit? + Pay Op or Not?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Chargeable Visit</fullName>
            </value>
            <value>
                <fullName>Free of Charge - I request pay</fullName>
            </value>
            <value>
                <fullName>Free of Charge - do not pay me</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>