unpackaged/main/default/objects/Costs_and_Charges__c/fields/Chrage_Labour_Discounted__c.field-meta.xml
<CustomField>
    <fullName>Chrage_Labour_Discounted__c</fullName>
    <formula>Charge_labour__c - Discount_Value__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Charge: Labour discounted</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>