unpackaged/main/default/objects/Costs_and_Charges__c/fields/Cost_Call_Out__c.field-meta.xml
<CustomField>
    <fullName>Cost_Call_Out__c</fullName>
    <formula>0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cost: Call Out</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>