unpackaged/main/default/objects/Costs_and_Charges__c/fields/Cost_Discount__c.field-meta.xml
<CustomField>
    <fullName>Cost_Discount__c</fullName>
    <formula>Discount_Value__c *  Rate_of_Pay__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cost Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>