unpackaged/main/default/objects/Costs_and_Charges__c/fields/Cost_Labour__c.field-meta.xml
<CustomField>
    <fullName>Cost_Labour__c</fullName>
    <formula>(Charge_labour__c)*  Rate_of_Pay__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cost: Labour</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>