unpackaged/main/default/objects/Costs_and_Charges__c/fields/Cost_Lead_Fee__c.field-meta.xml
<CustomField>
    <fullName>Cost_Lead_Fee__c</fullName>
    <label>Cost Lead Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>