unpackaged/main/default/objects/Costs_and_Charges__c/fields/Cost_List_Price_Services__c.field-meta.xml
<CustomField>
    <fullName>Cost_List_Price_Services__c</fullName>
    <formula>Charge_List_Price_Services__c *  0.5</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cost List Price Services</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>