unpackaged/main/default/objects/Costs_and_Charges__c/fields/Cost_Material_POs__c.field-meta.xml
<CustomField>
    <fullName>Cost_Material_POs__c</fullName>
    <inlineHelpText>his is the pre marked up value of Purchase Order, which is a cost to aspect</inlineHelpText>
    <label>Cost Material POs (Aspect)</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>