unpackaged/main/default/objects/Costs_and_Charges__c/fields/Cost_Materials_Engineer__c.field-meta.xml
<CustomField>
    <fullName>Cost_Materials_Engineer__c</fullName>
    <formula>Materials_Expense_wout_receipt_no_markup__c /*+ ( Material_POs_Engineer__c  +  Materials_Expenses_with_receipt__c )*1.1*/</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cost Materials Engineer</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>