unpackaged/main/default/objects/Costs_and_Charges__c/fields/Cost_Materials_Supplier__c.field-meta.xml
<CustomField>
    <fullName>Cost_Materials_Supplier__c</fullName>
    <formula>Material_POs_Aspect__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cost Materials Supplier</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>