unpackaged/main/default/objects/Costs_and_Charges__c/fields/Cost_Materials_Total__c.field-meta.xml
<CustomField>
    <fullName>Cost_Materials_Total__c</fullName>
    <formula>CASE(Record_Type__c,
&quot;R&quot;,
( Materials_Expense_wout_receipt_no_markup__c + Cost_Material_POs__c)
,

&quot;F&quot;,
Cost_Total_PO_Product_Required__c + Cost_Total_Van_Stock_Product_Required__c
+ Cost_Total_Scaffold_Product_Required__c
,
null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cost Materials Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>