unpackaged/main/default/objects/Costs_and_Charges__c/fields/Cost_Other_Item__c.field-meta.xml
<CustomField>
    <fullName>Cost_Other_Item__c</fullName>
    <label>Cost Other Item</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>