unpackaged/main/default/objects/Costs_and_Charges__c/fields/Cost_Other_Total__c.field-meta.xml
<CustomField>
    <fullName>Cost_Other_Total__c</fullName>
    <formula>Cost_Collection_Fee__c 
+
 Cost_Other_Item__c 
+
 Cost_Call_Out__c 
+
 Cost_ULEZ__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cost Other Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>