unpackaged/main/default/objects/Costs_and_Charges__c/fields/Cost_Total__c.field-meta.xml
<CustomField>
    <fullName>Cost_Total__c</fullName>
    <formula>Cost_Labour__c +  Cost_Materials_Total__c  +   Call_Out_Fee__c + Cost_Collection_Fee__c + Cost_Other_Item__c

 + Cost_ULEZ__c +  Fixed_Price_Admin_Fee_2__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cost Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>