unpackaged/main/default/objects/Costs_and_Charges__c/fields/Cost_Total_PO_Product_Required__c.field-meta.xml
<CustomField>
    <fullName>Cost_Total_PO_Product_Required__c</fullName>
    <label>Cost: Total PO Product Required</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>