unpackaged/main/default/objects/Costs_and_Charges__c/fields/Cost_ULEZ__c.field-meta.xml
<CustomField>
    <fullName>Cost_ULEZ__c</fullName>
    <formula>Charge_ULEZ__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cost ULEZ</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>