unpackaged/main/default/objects/Costs_and_Charges__c/fields/Discount_Code__c.field-meta.xml
<CustomField>
    <fullName>Discount_Code__c</fullName>
    <inlineHelpText>Buyapowa Voucher Code referenced from Account field Voucher Code</inlineHelpText>
    <label>Discount Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>