unpackaged/main/default/objects/Costs_and_Charges__c/fields/Discount_Engineer__c.field-meta.xml
<CustomField>
    <fullName>Discount_Engineer__c</fullName>
    <description>The discount (if any) given by the Engineer</description>
    <inlineHelpText>The discount (if any) given by the Engineer</inlineHelpText>
    <label>Discount Engineer</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>