unpackaged/main/default/objects/Costs_and_Charges__c/fields/Discount_Last_Modified_By__c.field-meta.xml
<CustomField>
    <fullName>Discount_Last_Modified_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Discount Last Modified By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Costs_and_Charges</relationshipName>
    <type>Lookup</type>
</CustomField>