unpackaged/main/default/objects/Costs_and_Charges__c/fields/Discount_Last_Modified_Time__c.field-meta.xml
<CustomField>
    <fullName>Discount_Last_Modified_Time__c</fullName>
    <label>Discount Last Modified Time</label>
    <type>DateTime</type>
</CustomField>