unpackaged/main/default/objects/Costs_and_Charges__c/fields/Discount_Manual_Override__c.field-meta.xml
<CustomField>
    <fullName>Discount_Manual_Override__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Discount Manual Override</label>
    <type>Checkbox</type>
</CustomField>