unpackaged/main/default/objects/Costs_and_Charges__c/fields/Discount_Manual_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Discount_Manual_Percentage__c</fullName>
    <label>Discount Manual Percentage</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>