unpackaged/main/default/objects/Costs_and_Charges__c/fields/Discount_Office__c.field-meta.xml
<CustomField>
    <fullName>Discount_Office__c</fullName>
    <description>The discount (if any) given by the Booking Team</description>
    <inlineHelpText>The discount (if any) given by the Booking Team</inlineHelpText>
    <label>Discount Office</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>