unpackaged/main/default/objects/Costs_and_Charges__c/fields/Discount_PL__c.field-meta.xml
<CustomField>
    <fullName>Discount_PL__c</fullName>
    <label>Discount PL</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>£25 Off</fullName>
            </value>
            <value>
                <fullName>10% Off Labour</fullName>
            </value>
            <value>
                <fullName>Manual Percentage</fullName>
            </value>
            <value>
                <fullName>Buyapowa Referal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>