unpackaged/main/default/objects/Costs_and_Charges__c/fields/Discount_Value__c.field-meta.xml
<CustomField>
    <fullName>Discount_Value__c</fullName>
    <formula>IF( ISPICKVAL( Discount_PL__c ,&#39;Buyapowa Referal&#39;), 25, 0)
+
IF( Discount_Manual_Percentage__c &gt; 0, ( Charge_labour__c + Charge_List_Price_Services__c - IF( ISPICKVAL( Discount_PL__c ,&#39;Buyapowa Referal&#39;), 25, 0) ) * Discount_Manual_Percentage__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Discount Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>