unpackaged/main/default/objects/Costs_and_Charges__c/fields/Discount_Value_old__c.field-meta.xml
<CustomField>
    <fullName>Discount_Value_old__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Discount Value</description>
    <inlineHelpText>Discount Value</inlineHelpText>
    <label>Discount Value</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>