unpackaged/main/default/objects/Costs_and_Charges__c/fields/Engineer_Off_Site__c.field-meta.xml
<CustomField>
    <fullName>Engineer_Off_Site__c</fullName>
    <label>Engineer Off Site</label>
    <type>DateTime</type>
</CustomField>