unpackaged/main/default/objects/Costs_and_Charges__c/fields/Engineer_On_Site__c.field-meta.xml
<CustomField>
    <fullName>Engineer_On_Site__c</fullName>
    <label>Engineer On Site</label>
    <type>DateTime</type>
</CustomField>