unpackaged/main/default/objects/Costs_and_Charges__c/fields/Fixed_Price_Admin_Fee_2__c.field-meta.xml
<CustomField>
    <fullName>Fixed_Price_Admin_Fee_2__c</fullName>
    <label>Fixed Price Admin Fee 2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>