unpackaged/main/default/objects/Costs_and_Charges__c/fields/Fixed_Price_Admin_Fee__c.field-meta.xml
<CustomField>
    <fullName>Fixed_Price_Admin_Fee__c</fullName>
    <formula>if (   ISPICKVAL(Record_Type__c,&#39;F&#39;) ,

( Charge_Total_Pre_Admin_Fee__c )*0.1

,
 0 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fixed Price Admin Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>