unpackaged/main/default/objects/Costs_and_Charges__c/fields/FP_Duration_Minutes__c.field-meta.xml
<CustomField>
    <fullName>FP_Duration_Minutes__c</fullName>
    <label>FP Duration Minutes</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>