unpackaged/main/default/objects/Costs_and_Charges__c/fields/FP_Selected_Day__c.field-meta.xml
<CustomField>
    <fullName>FP_Selected_Day__c</fullName>
    <label>FP Selected Day</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Weekday</fullName>
                <default>true</default>
                <label>Weekday</label>
            </value>
            <value>
                <fullName>Weekend</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>