unpackaged/main/default/objects/Costs_and_Charges__c/fields/FP_Selected_Rate__c.field-meta.xml
<CustomField>
    <fullName>FP_Selected_Rate__c</fullName>
    <label>FP Selected Rate</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Day</fullName>
                <default>true</default>
                <label>Day</label>
            </value>
            <value>
                <fullName>Evening</fullName>
            </value>
            <value>
                <fullName>Night</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>