unpackaged/main/default/objects/Costs_and_Charges__c/fields/Hourly_Charge_R2__c.field-meta.xml
<CustomField>
    <fullName>Hourly_Charge_R2__c</fullName>
    <label>Hourly Charge R2</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>