unpackaged/main/default/objects/Costs_and_Charges__c/fields/Include_in_estimate__c.field-meta.xml
<CustomField>
    <fullName>Include_in_estimate__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Include in estimate</label>
    <type>Checkbox</type>
</CustomField>