unpackaged/main/default/objects/Costs_and_Charges__c/fields/Job__c.field-meta.xml
<CustomField>
    <fullName>Job__c</fullName>
    <label>Job</label>
    <referenceTo>Job__c</referenceTo>
    <relationshipLabel>Costs and Charges</relationshipLabel>
    <relationshipName>Costs_and_Charges</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>