unpackaged/main/default/objects/Costs_and_Charges__c/fields/Mark_Up_Band_2_Rate__c.field-meta.xml
<CustomField>
    <fullName>Mark_Up_Band_2_Rate__c</fullName>
    <label>Mark Up Band 2 Rate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>