unpackaged/main/default/objects/Costs_and_Charges__c/fields/Mark_Up_Band_2_Start__c.field-meta.xml
<CustomField>
    <fullName>Mark_Up_Band_2_Start__c</fullName>
    <label>Mark Up Band 2 Start</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>