unpackaged/main/default/objects/Costs_and_Charges__c/fields/Material_Mark_Up__c.field-meta.xml
<CustomField>
    <fullName>Material_Mark_Up__c</fullName>
    <defaultValue>0.4</defaultValue>
    <description>Percentage markup used to calculate the charge to customer for materials used.</description>
    <inlineHelpText>Percentage markup used to calculate the charge to customer for materials used.</inlineHelpText>
    <label>Material Mark Up</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>