unpackaged/main/default/objects/Costs_and_Charges__c/fields/Material_POs_Aspect__c.field-meta.xml
<CustomField>
    <fullName>Material_POs_Aspect__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Expenses (Aspect) - value of all Purchase Orders - not to be paid to the engineer.</description>
    <inlineHelpText>Expenses (Aspect) - value of all Purchase Orders - not to be paid to the engineer.</inlineHelpText>
    <label>Material POs (Aspect)</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>