unpackaged/main/default/objects/Costs_and_Charges__c/fields/Material_POs_Engineer__c.field-meta.xml
<CustomField>
    <fullName>Material_POs_Engineer__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Expenses (Engineer) - claimed by engineer through mobile app - charged to customer at marked up rate, payment to engineer of total cost plus 10% for each expense with a receipt.</description>
    <inlineHelpText>Expenses (Engineer) - claimed by engineer through mobile app - charged to customer at marked up rate, payment to engineer of total cost plus 10% for each expense with a receipt.</inlineHelpText>
    <label>Material POs (Engineer)</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>