unpackaged/main/default/objects/Costs_and_Charges__c/fields/Materials_Collection_Charge__c.field-meta.xml
<CustomField>
    <fullName>Materials_Collection_Charge__c</fullName>
    <description>Remove</description>
    <label>To Be Removed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>