unpackaged/main/default/objects/Costs_and_Charges__c/fields/Materials_Expense_wout_receipt_no_markup__c.field-meta.xml
<CustomField>
    <fullName>Materials_Expense_wout_receipt_no_markup__c</fullName>
    <label>Van Stock Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>