unpackaged/main/default/objects/Costs_and_Charges__c/fields/Materials_Expenses_w_out_receipt__c.field-meta.xml
<CustomField>
    <fullName>Materials_Expenses_w_out_receipt__c</fullName>
    <description>With Mark Up</description>
    <inlineHelpText>With Mark Up</inlineHelpText>
    <label>Van Stock Charge</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>