unpackaged/main/default/objects/Costs_and_Charges__c/fields/Materials_Expenses_with_receipt__c.field-meta.xml
<CustomField>
    <fullName>Materials_Expenses_with_receipt__c</fullName>
    <label>Materials: Expenses (with receipt)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>