unpackaged/main/default/objects/Costs_and_Charges__c/fields/Minimum_Units_of_Charge__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Units_of_Charge__c</fullName>
    <label>Minimum Units of Charge</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>