unpackaged/main/default/objects/Costs_and_Charges__c/fields/Override_Applied__c.field-meta.xml
<CustomField>
    <fullName>Override_Applied__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Boolean value. If TRUE, managers rate override has been applied - see &quot;Manager Override Section&quot; for details.</description>
    <inlineHelpText>Boolean value. If TRUE, managers rate override has been applied - see &quot;Manager Override Section&quot; for details.</inlineHelpText>
    <label>Override Applied</label>
    <type>Checkbox</type>
</CustomField>