unpackaged/main/default/objects/Costs_and_Charges__c/fields/Override_Guaranteed_Units__c.field-meta.xml
<CustomField>
    <fullName>Override_Guaranteed_Units__c</fullName>
    <label>Override Guaranteed Units</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>