unpackaged/main/default/objects/Costs_and_Charges__c/fields/Override_Manager_Choice__c.field-meta.xml
<CustomField>
    <fullName>Override_Manager_Choice__c</fullName>
    <label>Override Manager Choice</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Specify minimum units at selected rate</fullName>
            </value>
            <value>
                <fullName>Select overriding rate for all units</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>