unpackaged/main/default/objects/Costs_and_Charges__c/fields/Override_Selected_Rate__c.field-meta.xml
<CustomField>
    <fullName>Override_Selected_Rate__c</fullName>
    <label>Override Selected Rate</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>R1</fullName>
            </value>
            <value>
                <fullName>R2</fullName>
            </value>
            <value>
                <fullName>R3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>