unpackaged/main/default/objects/Costs_and_Charges__c/fields/Rate_of_Charge__c.field-meta.xml
<CustomField>
    <fullName>Rate_of_Charge__c</fullName>
    <description>The hourly rate of charge</description>
    <inlineHelpText>The hourly rate of charge</inlineHelpText>
    <label>Rate of Charge</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>