unpackaged/main/default/objects/Costs_and_Charges__c/fields/Rate_of_Pay__c.field-meta.xml
<CustomField>
    <fullName>Rate_of_Pay__c</fullName>
    <description>Rate of Pay as a percentage of the Rate of Charge</description>
    <inlineHelpText>Rate of Pay as a percentage of the Rate of Charge</inlineHelpText>
    <label>Rate of Pay</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>